# chisato

./: .gitignore  README.md  main.py  pyproject.toml
config/: budgets.toml
monban/: .gitignore  main.py
monban/utils/: statements.py
utils/: budget.py  config.py  csv.py  filewatching.py  statements.py
